--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,13 @@
     		<artifactId>jaxb-api</artifactId>
     		<version>2.3.0</version>
 		</dependency>
+
+		<!-- Lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
 	</dependencies>
 
 	<build>
